# diffusion-vs-ar

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
model_config/: config.json
model_config_llada_tiny/: config.json  configuration_llada.py  modeling_llada.py  special_tokens_map.json  tokenizer_config.json
model_config_medium/: config.json
model_config_tiny/: config.json
scripts/3-sat/: train-sft.sh
scripts/cd/: train-sft-llama-13b.sh  train-sft-llama-7b.sh  train-sft.sh
scripts/path/: cal_path_acc.py  train-sft.sh
scripts/sudoku/: train-mdm-llada-tiny-d1.sh  train-mdm-llada-tiny.sh  train-sft-llama-13b.sh  train-sft-llama-7b.sh  train-sft.sh
src/llmtuner/: __init__.py
src/llmtuner/dsets/: loader.py  preprocess.py  utils.py
src/llmtuner/extras/: callbacks.py  logging.py  misc.py  ploting.py
src/llmtuner/hparams/: __init__.py  data_args.py  diffusion_args.py  finetuning_args.py  generating_args.py  model_args.py
src/llmtuner/tuner/: tune.py
src/llmtuner/tuner/core/: adapter.py  custom_tokenizer.py  loader.py  metric.py  parser.py  utils.py
src/llmtuner/tuner/mdm/: model.py  trainer.py  workflow.py
src/llmtuner/tuner/sft/: trainer.py  workflow.py
